1999-03-31  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Remove globalZone, uniformIntRand, 
	uniformDblRand from arguments list in initSwarm method.
	Type globalZone field as ZoneU instead of GlobalZone.

1999-03-24  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Facilitate uniformDblRand field and directory
	initialization.

	* Makefile.in (%.class): Add ../ to classpath so that SwarmEnvironment
	could import swarm.random.*

1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.java: Add globalZone argument to initSwarm.

1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in, Makefile.rules.in (CLASSPHASES): Use U and S
	instead of _u and _s.

	* SwarmEnvironment.java: Add globalZone instance variable.  Initialize
	it in the constructor.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (GENINTERFACEFILES): New variable.
	(all): Use it. 
	(GENCLASSFILES, GENINTERFACEFILES): Do phase expansion.

	* GlobalZone.java: Make public.

	* Selector.java: Add objcFlag.  This flag determines whether
	or not the method signature is treated by s/:/$/ or if additional
	arguments are added with concatenation of :.

	* NonUniqueMethodSignatureException.java,
	SignatureNotFoundException.java: New files.

	* Makefile.in (CLASSES): Add NonUniqueMethodSignatureException and
	SignatureNotFoundException.
	(%.class): Add $(srcdir)/.. to classpath.

	* Selector.java: Search through results of getMethods and match
	by signature name.  If there is more than one found, raise
	NonUniqueMethodSignature exception.  If none is found raise
	SignatureNotFoundException. 

1999-03-21  Marcus G. Daniels  <mgd@chimayo.santafe.edu>

	* Selector.java: Make class public.

	* SwarmEnvironment.java: Remove main.  Wrap call to initSwarm
	in constructor.

	* Makefile.in (SWARMCLASSFILES): New variable with swarm/ prefix in
	front of CLASSFILES.